fixed overflowing problem of text and image

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ header{
 
 /* utilities */
 .card{
-    width: 100%;
     height: 100vh;
     position: relative;
 }
@@ -60,9 +59,13 @@ header{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 80px;
+    font-size: 4vw;
     text-align: center;
     text-transform: uppercase;
+}
+
+.shoe-box img{
+    width: 100%;
 }
 
 
